# DNA-v32

./: .gitignore  CMakeLists.txt  README.md  assembler.py  cache.cpp  cache.h  demo_commands.txt  demo_commands2.txt  demo_output.txt  driver.cpp  main.cpp  main2.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memory.cpp  memory.h  memory.h.autosave  output.txt  pipeline.cpp  pipeline.h  registers.cpp  registers.h  temp.s  test_output.txt  test_temp.s
Testing/tests/: pipeline_tests.cpp
assembler/: assembler.py  mnemonic_table.py
demos/: bubble_sort.s  bubble_sort.txt  bubble_sort_2.s  bubble_sort_3.s  bubble_sort_80_elems.s  bubble_sort_no_comments.s  demo.S  matrix_multiply.s  matrix_multiply_6x6.s  matrix_multiply_8x8.s  simple_assembly_commads.txt  vec_matrix_multi.s  vec_matrix_multi_6x6.s
demos/testers/: bubble_sort_no_comments.s  simple_assembly_commads.txt  simple_branching.s
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: cache.h  driver.h  main.h  memory.h  parseInput.h  pipeline.h  registers.h
src/: cache.cpp  driver.cpp  main.cpp  parseInput.cpp  pipeline.cpp
